--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
               <p class="video-stats">
                 3.4M views &#183; 6 months ago
               </p>
+              <a href="linkedPage.html">Link</a>
             </div>
           </div>
         </div>
